prometheus/prom-nginx-ingress-v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prom
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - wolfman.crabdance.com
    secretName: prom-tls
  rules:
  - host: wolfman.crabdance.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
         service:
          name: prometheus-server
          port:
           number: 80
